# ai-agents-real-work-book

./: .env.example  .gitignore  PLAN.md  PRD.md  README.md  TODO.md  pyproject.toml
docs/: workflow.md
latex/: bidi_section.tex  diagrams.tex  figures.tex  formulas.tex  main.tex  preamble.tex  references.bib  tables.tex  topic_sections.tex
outputs/drafts/: chapter_01_draft.md
outputs/logs/: chapter_01_run_20260612T002344Z.json  cost_report.json  cost_report.md  pdf_verification.md
outputs/research/: chapter_01_research.md  live_search_20260611T234908Z.json
outputs/reviews/: chapter_01_review.md
scripts/: build_pdf.py  check_config.py  make_figures.py  report_costs.py  run_crew.py  run_live_search.py  verify_pdf_elements.py
src/: __init__.py  agent_config.py  agents.py  chapters.py  config.py  cost_models.py  cost_tracker.py  crew_factory.py  crew_runner.py  latex_fragments.py  latex_runner.py  pdf_artifact_checks.py  pdf_build.py  pdf_check_helpers.py  pdf_checks.py  pdf_content_checks.py  pdf_report.py  pdf_structure_checks.py  pdf_verification.py  redaction.py  run_artifacts.py  search_adapter.py  search_models.py  search_tool.py  task_config.py  tasks.py  token_estimator.py
tests/: test_agents.py  test_chapters.py  test_config.py  test_cost_tracker.py  test_crew_factory.py  test_latex_structure.py  test_pdf_elements.py  test_pdf_verification.py  test_redaction.py  test_run_artifacts.py  test_run_crew_script.py  test_search_adapter.py  test_search_tool.py  test_tasks.py
