[project]
name = "ai-agents-real-work-book"
version = "0.1.0"
description = "CrewAI system that researches live internet sources and produces a LaTeX PDF book."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai",
    "crewai-tools",
    "python-dotenv",
    "pydantic",
    "httpx",
    "matplotlib",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
